--- a/src/main/webapp/resources/component/common/inlinePassword.xhtml
+++ b/src/main/webapp/resources/component/common/inlinePassword.xhtml
@@ -12,8 +12,8 @@
            
 	<composite:implementation>
             <p:password id="pwd1" feedback="true" inline="true" value="#{cc.attrs.value}" 
-                        weakLabel="Week" strongLabel="Strong" goodLabel="Good" promptLabel="Password strong">
-                <f:validateRegex pattern="#{systemProperties.passwordComplexity}" />
+                        weakLabel="Week" strongLabel="Strong" goodLabel="Good" promptLabel="Password strong" required="false">
+                <f:validateRegex pattern="#{systemProperties.passwordComplexity}"/>
             </p:password>
 	</composite:implementation>
  
