Add roles to users

--- a/src/main/webapp/resources/component/common/inlinePassword.xhtml
+++ b/src/main/webapp/resources/component/common/inlinePassword.xhtml
@@ -8,12 +8,14 @@
  
         <composite:interface>         
             <composite:attribute name="value"/>
+            <composite:attribute name="required" default="false"/>
+            <composite:attribute name="validatorDisabled" default="true"/>
         </composite:interface>
            
 	<composite:implementation>
             <p:password id="pwd1" feedback="true" inline="true" value="#{cc.attrs.value}" 
-                        weakLabel="Week" strongLabel="Strong" goodLabel="Good" promptLabel="Password strong" required="false">
-                <f:validateRegex pattern="#{systemProperties.passwordComplexity}"/>
+                        weakLabel="Week" strongLabel="Strong" goodLabel="Good" promptLabel="Password strong" required="#{cc.attrs.required}">
+                <f:validateRegex pattern="#{systemProperties.passwordComplexity}" disabled="#{cc.attrs.validatorDisabled}"/>
             </p:password>
 	</composite:implementation>
  
